# aigc-video-platform-v2

./: .gitattributes  .gitignore  CLAUDE.md  DOCKER.md  README.md  docker-compose.yml  start.bat  start.sh
.claude/: launch.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  build.spec  entrypoint.sh  requirements.txt  run.py
backend/alembic/: env.py
backend/alembic/versions/: 7a2cdcc63b16_add_cascade_deletes_to_task_fks.py  c35120d6ff8e_initial_tables.py
backend/app/: config.py  database.py  errors.py  main.py  models.py  scheduler.py  schemas.py
backend/app/routers/: analytics.py  app_settings.py  content.py  drafts.py  health.py  pipeline.py  products.py  profiles.py  schedule.py  scraper.py  servers.py  tags.py  tasks.py  templates.py  videos.py
backend/app/services/: adspower.py  copywriter.py  image_gen.py  kie_client.py  pipeline_orchestrator.py  pipeline_state.py  product_scorer.py  product_scraper.py  publisher.py  retry.py  scraper.py  script_gen.py  stt.py  transcriber.py  tts.py  video_editor.py
backend/app/ws/: manager.py
docs/: ENTERPRISE_EVALUATION.md
docs/plans/: 2026-03-20-commercial-product-design.md  2026-03-20-phase-a-implementation.md
docs/wiki/: WIKI.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: analytics.ts  appSettings.ts  client.ts  content.ts  drafts.ts  (+11 more)
scripts/: build-all.sh  build-backend.sh  build-frontend.sh  build-installer.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+37 files in other folders)
